# libpreopen

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt
cmake/modules/: FindFileCheck.cmake  FindLit.cmake
doc/: CMakeLists.txt
include/: libpreopen.h
lib/: CMakeLists.txt  libpreopen.c
test/: CMakeLists.txt  access.c  isprefix.c  lit.cfg  map.c  open.c  shm-capsicum.c  shm.c  stat.c  test_support.py
